# dotfiles

./: .agents  .bumpversion.cfg  .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  Brewfile  Firewatch Mountains.heic  Lucario.itermcolors  Makefile  One Dark.itermcolors  Pipfile  README.md  README.rst  _config.yml  agrc  bash_profile  bootstrap  bootstrap_osx.sh  dropbox-sync.sh  dropbox_sync.sh  gitconfig  gitignore  if_wan_down.sh  inputrc  macsetup  pyproject.toml  tmux.conf  ubee-howser.sh  ubee_howser_md.sh  wan_healthcheck.sh
LaunchAgents/: com.dotfiles.DropboxSync.plist  org.nficano.dotfiles.DropboxSync.plist
bash_completion.d/: inet
boilerplates/: shell-script-boilerplate.sh  shell-script-lite-boilerplate.sh  shell-script-no-argsboilerplate.sh
docs/: index.md
home/: direnvrc  gitconfig  gitignore  gitmessage  inputrc  lesskey  nanorc  tmux.conf
launchd/: org.nficano.dotfiles.DropboxSync.plist
lib/: bash_helpers  envdb  rdb-common
misc/: Mosaic.mosaicprefs  (+15 more)
tools/pentool/: pyproject.toml
tools/pentool/src/pentool/: .envrc  Pipfile  __init__.py  __main__.py  cli.py  constants.py  docker_runner.py  utils.py
tools/pentool/src/pentool/commands/: __init__.py  fingerprint.py  recon.py  scan.py  update_data.py  webmap.py
tools/pentool/src/pentool/common/: __init__.py  cache.py  convert.py  fileio.py
tools/pentool/src/pentool/models/: __init__.py  finding.py  nikto.py  severity.py  sslyze.py  zap.py
tools/pentool/src/pentool/parsers/: __init__.py  gnmap.py  httpx.py  sslyze.py
tools/pentool/src/pentool/resources/: Dockerfile  USAGE.txt
(+108 files in other folders)
